--- a/FrotiX.Site.OLD/Pages/SetorPatrimonial/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/SetorPatrimonial/Upsert.cshtml
@@ -106,10 +106,9 @@
 											asp-for="SetorObj.NomeSetor"></label>
 										<span class="text-danger font-weight-light"
 											asp-validation-for="SetorObj.NomeSetor"></span>
-										<ejs-textbox id="nomeSetor" name="SetorObj.NomeSetor"
-											cssClass="my-syncfusion-input--small" value="@Model.SetorObj.NomeSetor"
-											placeholder="Digite o nome do setor">
-										</ejs-textbox>
+									<input type="text" id="nomeSetor" name="SetorObj.NomeSetor" class="form-control form-control-sm"
+										   value="@Model.SetorObj.NomeSetor"
+										   placeholder="Digite o nome do setor" />
 									</div>
 								</div>
 
